--- a/source/_posts/年轻的技术合伙人-你所付出的将比你想象中的多.md
+++ b/source/_posts/年轻的技术合伙人-你所付出的将比你想象中的多.md
@@ -8,11 +8,13 @@ categories:
 date: 2017-03-11 19:08:44
 ---
 
+
 福州厦门的房价在过去的十几个月中, 不断地上升. 前年住所附近的侨福城, 80 多平米的小户型卖到了三百多万. 在榕在厦的年轻人如若不是有些家底, 根本不用指望自己的薪水和存款能够跟上房价的涨幅. 可能今年算出来不吃不喝攒满 7 年(算上定期存款的复利)能够凑足一套小户型的首付, 到了明年发现离这个目标并没有变得更近. 
 
 在房价和未来丈母娘的高压之下, 年轻人实现财富自由的阈值变得越来越高. 加之中国社会的上升通道正在不断地收窄, 年轻人不论是想实现自我的价值, 还是只是单纯地想富成一个废物, 光靠单纯的打工挣钱已经很难实现了. 
 
 <!--more-->
+![配图来自南瓜先生的大冒险](dilemma.jpg)
 
 而互联网创业这条路无疑是视野内实现这一目标的光明大道, 但凡有些抱负的青年才俊, 都知道应该抓住身边的机会, 在绝境中寻求突破. 
 
