--- a/source/_posts/防御性编程之道.md
+++ b/source/_posts/防御性编程之道.md
@@ -181,6 +181,6 @@ $bobMailer->sendMessage();
 这还用强调吗? 写单元测试能帮助你遵守一些通用的原则如 "高内聚, 低耦合", "单一职责原则", "良好的对象组成". 不仅能帮助你测试小的工作单元, 也能测试你构建你的对象的方式. 事实上, 当你测试你的小功能时, 你会清楚地看到你需要多少测试用例, 模拟多少对象才能够 100% 地覆盖你的代码.
 
 # 总结
-希望你能喜欢这篇文章, 记住这些只是建议, 具体在什么时候, 哪里, 是否要使用防御性编程, 还是要取决于你自己. 
+希望你能喜欢这篇文章, 记住这些只是建议, 具体在什么时候, 在哪里, 是否要使用防御性编程, 还是要取决于你自己. 
 
 **谢谢阅读, 祝你有个愉快的一天!**
